<resources>
    <string name="app_name">Projeto_Jose_Guilherme_DMOS5</string>
    <string name="buscar">Buscar</string>
    <string name="uf">UF</string>
    <string name="mortes">Mortes</string>
    <string name="suspeitos">Suspeitos</string>
    <string name="recusados">Recusados</string>
    <string name="data">Data</string>
    <string name="casos">Casos</string>
    <string name="estado">Estado</string>
    <string-array name="siglas_estados">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
        <item>DF</item>
    </string-array>
</resources>